--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uoft_fom_grc_website",
+  "name": "",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,16 +10,27 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.0",
     "@astrojs/check": "^0.9.3",
-    "@astrojs/react": "^3.6.2",
+    "@astrojs/mdx": "^3.1.5",
+    "@astrojs/netlify": "^5.5.1",
+    "@astrojs/rss": "^4.0.7",
+    "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
-    "astro": "^4.14.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "@astrojs/vercel": "^7.8.0",
+    "@iconify-json/mdi": "^1.2.0",
+    "@types/alpinejs": "^3.13.10",
+    "alpinejs": "^3.14.1",
+    "astro": "^4.15.2",
+    "astro-icon": "^1.1.1",
+    "sharp": "^0.33.5",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.14",
-    "tailwindcss": "^3.4.10"
+    "@tailwindcss/typography": "^0.5.15",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.6"
   }
 }
