--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "uoft-fom-grc-website",
-  "type": "module",
-  "version": "0.0.3",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/alpinejs": "^0.4.0",
-    "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^3.1.9",
-    "@astrojs/netlify": "^5.5.4",
-    "@astrojs/rss": "^4.0.9",
-    "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.2",
-    "@astrojs/vercel": "^7.8.2",
-    "@iconify-json/mdi": "^1.2.1",
-    "@types/alpinejs": "^3.13.10",
-    "alpinejs": "^3.14.3",
-    "astro": "^4.16.9",
-    "astro-icon": "^1.1.1",
-    "sharp": "^0.33.5",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
-  },
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.15",
-    "prettier": "^3.3.3",
-    "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.8"
-  }
+	"name": "uoft-fom-grc-website",
+	"type": "module",
+	"version": "0.0.4",
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro check && astro build && pnpx pagefind --site dist && cp -r dist/pagefind public/",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/alpinejs": "^0.4.0",
+		"@astrojs/check": "^0.9.4",
+		"@astrojs/mdx": "^3.1.9",
+		"@astrojs/netlify": "^5.5.4",
+		"@astrojs/rss": "^4.0.9",
+		"@astrojs/sitemap": "^3.2.1",
+		"@astrojs/tailwind": "^5.1.2",
+		"@astrojs/vercel": "^7.8.2",
+		"@iconify-json/mdi": "^1.2.1",
+		"@types/alpinejs": "^3.13.10",
+		"alpinejs": "^3.14.3",
+		"astro": "^4.16.10",
+		"astro-icon": "^1.1.2",
+		"sharp": "^0.33.5",
+		"tailwindcss": "^3.4.14",
+		"typescript": "^5.6.3"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.15",
+		"pagefind": "^1.2.0",
+		"prettier": "^3.3.3",
+		"prettier-plugin-astro": "^0.14.1",
+		"prettier-plugin-tailwindcss": "^0.6.8"
+	}
 }
