--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
 		"@astrojs/netlify": "^6.6.0",
 		"@astrojs/rss": "^4.0.13",
 		"@astrojs/sitemap": "^3.6.0",
-		"@astrojs/tailwind": "^6.0.2",
 		"@iconify-json/mdi": "^1.2.3",
+		"@tailwindcss/vite": "^4.1.16",
 		"@types/alpinejs": "^3.13.11",
 		"alpinejs": "^3.15.0",
 		"astro": "^5.15.1",
 		"astro-icon": "^1.1.5",
 		"sharp": "^0.34.4",
-		"tailwindcss": "^3.4.18",
+		"tailwindcss": "^4.1.16",
 		"typescript": "^5.9.3"
 	},
 	"devDependencies": {
