--- a/package.json
+++ b/package.json
@@ -14,14 +14,24 @@
 		"@astrojs/check": "^0.9.5",
 		"@astrojs/mdx": "^4.3.8",
 		"@astrojs/netlify": "^6.6.0",
+		"@astrojs/react": "^4.4.0",
 		"@astrojs/rss": "^4.0.13",
 		"@astrojs/sitemap": "^3.6.0",
 		"@iconify-json/mdi": "^1.2.3",
+		"@nivo/bar": "^0.99.0",
+		"@nivo/core": "^0.99.0",
+		"@nivo/line": "^0.99.0",
+		"@nivo/scatterplot": "^0.99.0",
+		"@nivo/boxplot": "^0.99.0",
 		"@tailwindcss/vite": "^4.1.16",
 		"@types/alpinejs": "^3.13.11",
+		"@types/react": "^19.2.2",
+		"@types/react-dom": "^19.2.2",
 		"alpinejs": "^3.15.0",
 		"astro": "^5.15.1",
 		"astro-icon": "^1.1.5",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
 		"sharp": "^0.34.4",
 		"tailwindcss": "^4.1.16",
 		"typescript": "^5.9.3"
