--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,12 +1,12 @@
 backend:
-  name: github
-  repo: UofT-FoM-GRC/Website
+  name: git-gateway
   branch: dev
-  base_url: https://api.netlify.com
-  auth_endpoint: auth
+
+# Use editorial workflow to prevent direct commits to dev
+publish_mode: editorial_workflow
 
 media_folder: public/assets
-public_path: /assets
+public_folder: /assets
 
 collections:
   - name: blog
@@ -14,15 +14,92 @@ collections:
     folder: src/blog
     create: true
     slug: '{{slug}}'
-    format: md
+    extension: md
+    format: frontmatter
+    identifier_field: title
+    summary: '{{title}} - {{pubDate}}'
+    sortable_fields: ['pubDate', 'title']
+    view_filters:
+      - label: Employment
+        field: tags
+        pattern: 'employment'
+      - label: Career Planning
+        field: tags
+        pattern: 'career-planning-exploration'
+      - label: Continuing Education
+        field: tags
+        pattern: 'continuing-education'
+      - label: Health & Wellness
+        field: tags
+        pattern: 'health-wellness'
+      - label: Housing
+        field: tags
+        pattern: 'housing'
+      - label: Scholarships
+        field: tags
+        pattern: 'scholarships-bursaries-awards'
+      - label: Application Support
+        field: tags
+        pattern: 'scholarship-award-grant-application-support'
+      - label: Other
+        field: tags
+        pattern: 'other'
     fields:
-      - { label: Title, name: title, widget: string }
-      - { label: Description, name: description, widget: text }
-      - { label: Publish Date, name: pubDate, widget: datetime }
-      - { label: Hero Image, name: heroImage, widget: image, required: false }
-      - { label: Body, name: body, widget: markdown }
+      - label: Title
+        name: title
+        widget: string
+        hint: The main title of your blog post
+      - label: Description
+        name: description
+        widget: text
+        hint: A short description (1-2 sentences) that appears in blog cards
+      - label: Publish Date
+        name: pubDate
+        widget: datetime
+        format: 'MMM D YYYY'
+        date_format: 'MMM D YYYY'
+        time_format: false
+        hint: The date this post is published
+      - label: Updated Date
+        name: updatedDate
+        widget: datetime
+        format: 'MMM D YYYY'
+        date_format: 'MMM D YYYY'
+        time_format: false
+        required: false
+        hint: Optional - use this when updating an existing post
+      - label: Hero Image
+        name: heroImage
+        widget: image
+        required: false
+        hint: Optional banner image for the post. Upload to /assets folder or use existing images
+        media_folder: /public/assets
+        public_folder: /assets
       - label: Tags
         name: tags
-        widget: list
-        field: { label: Tag, name: tag, widget: string }
-        required: false
+        widget: select
+        multiple: true
+        min: 1
+        max: 3
+        hint: Select 1-3 relevant tags to help organize this post
+        options:
+          - label: Employment
+            value: employment
+          - label: Career Planning & Exploration
+            value: career-planning-exploration
+          - label: Continuing Education
+            value: continuing-education
+          - label: Health & Wellness
+            value: health-wellness
+          - label: Housing
+            value: housing
+          - label: Scholarships, Bursaries & Awards
+            value: scholarships-bursaries-awards
+          - label: Scholarship/Award/Grant Application Support
+            value: scholarship-award-grant-application-support
+          - label: Other
+            value: other
+      - label: Body
+        name: body
+        widget: markdown
+        hint: The main content of your blog post. Use Markdown formatting.
