--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,4 +1,24 @@
 {
-	"recommendations": ["astro-build.astro-vscode"],
+	"recommendations": [
+		"astro-build.astro-vscode",
+		"vivaxy.vscode-conventional-commits",
+		"mhutchie.git-graph",
+		"donjayamanne.githistory",
+		"yzhang.markdown-all-in-one",
+		"bierner.markdown-checkbox",
+		"bierner.markdown-emoji",
+		"bierner.markdown-footnotes",
+		"bierner.markdown-preview-github-styles",
+		"bierner.markdown-mermaid",
+		"ionutvmi.path-autocomplete",
+		"christian-kohler.path-intellisense",
+		"esbenp.prettier-vscode",
+		"YoavBls.pretty-ts-errors",
+		"bradlc.vscode-tailwindcss",
+		"Orta.vscode-twoslash-queries",
+		"pmneo.tsimporter",
+		"pflannery.vscode-versionlens",
+		"vitest.explorer"
+	],
 	"unwantedRecommendations": []
 }
